--- a/main.tex
+++ b/main.tex
@@ -178,6 +178,7 @@
   % 使用 BibTeX
   % 选择参考文献的排版格式。注意ustcbib这个格式不保证完全符合要求，请自行决定是否使用
   \bibliographystyle{cugbib}%{GBT7714-2005NLang-UTF8}
+  %\bibliographystyle{gbt7714-2005}%{GBT7714-2005NLang-UTF8}
   \bibliography{bib/ref}
   \nocite{*} % for every item
   % 不使用 BibTeX
